@@ -6,6 +6,8 @@ Changes to CollisionUtils:
  - Fixed getCollisionPoint() not properly updating the bounds facing/position
 Changes to MathUtils:
  - Added getMidpoint(Vector2f point1, Vector2f point2)
+ - Added getPointOnEllipse(Vector2f ellipseCenter, float ellipseWidth,
+   float ellipseHeight, float ellipseAngleOffset, float angle)
 Changes to StringUtils:
  - Fixed wrapString() appending a newline when the input didn't have one
  - Also fixed a rare bug with wrapString() where it wouldn't include the last
